transitions have been added, BEM class names have been rewritten

--- a/css/style.css
+++ b/css/style.css
@@ -108,23 +108,24 @@ body {
   background-color: #fff;
 }
 
-.header-link {
+.nav__link {
   position: relative;
   font-weight: 600;
   font-size: 15px;
   color: #1C1C1C;
+  transition: color 0.3s ease-in-out;
 }
 
-.header-link:focus {
+.nav__link:focus {
   outline-offset: 2px;
   outline: 1px solid #71a7e2;
 }
 
-.header-link:hover {
+.nav__link:hover {
   color: #71a7e2;
 }
 
-.header-link::after {
+.nav__link::after {
   content: "";
   position: absolute;
   left: 0;
@@ -133,30 +134,31 @@ body {
   height: 2px;
   background-color: #3474ba;
   opacity: 0;
+  transition: opacity 0.3s ease-in-out;
 }
 
-.header-link:active {
+.nav__link:active {
   outline: none;
   color: #3172b9;
 }
 
-.header-link:active::after {
+.nav__link:active::after {
   opacity: 1;
 }
 
-.header-container {
+.header__container {
   align-items: center;
 }
 
-.header-logo {
+.header__logo {
   margin-right: auto;
 }
 
-.header-nav {
+.header__nav {
   margin-right: 52px;
 }
 
-.header-list-item:not(:last-child) {
+.nav__item:not(:last-child) {
   margin-right: 52px;
 }
 
@@ -170,6 +172,7 @@ body {
   background-color: #3172b9;
   border-radius: 3px;
   color: #fff;
+  transition: background-color 0.3s ease-in-out;
 }
 
 .btn::after {
@@ -183,6 +186,7 @@ body {
   border: 1px solid #71a7e2;
   outline: none;
   opacity: 0;
+  transition: opacity 0.3s ease-in-out;
 }
 
 .btn:focus::after {
@@ -212,13 +216,13 @@ body {
   background-position: center;
 }
 
-.hero-content {
+.hero__content {
   max-width: 50%;
   flex-direction: column;
   align-items: flex-start;
 }
 
-.hero-title {
+.hero__title {
   margin: 0;
   margin-bottom: 25px;
   font-weight: 300;
@@ -227,7 +231,7 @@ body {
   color: #1C1C1C;
 }
 
-.hero-descr {
+.hero__descr {
   margin: 0;
   margin-bottom: 34px;
   font-weight: 400;
@@ -236,19 +240,19 @@ body {
   color: #787878;
 }
 
-.hero-wrapper {
+.hero__wrapper {
   flex-direction: column;
   align-items: center;
 }
 
-.hero-btn {
+.hero__btn {
   margin-bottom: 14px;
   min-width: 250px;
   padding-top: 20px;
   padding-bottom: 20px;
 }
 
-.hero-secure {
+.hero__secure {
   font-size: 11px;
   line-height: 155%;
   text-transform: uppercase;
@@ -266,63 +270,67 @@ body {
   border-bottom: 1px solid #dadada;
 }
 
-.services-title {
+.services__title {
   text-align: center;
 }
 
-.services-descr {
+.services__descr {
   text-align: center;
 }
 
-.services-item {
+.services__item {
   flex-direction: column;
   align-items: center;
   padding: 60px 30px;
   width: 270px;
   border: 1px solid #e4e4e4;
   border-radius: 5px;
+  transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
 }
 
-.services-item:hover {
+.services__item:hover {
   border-color: #3172b9;
   background-color: #3172b9;
 }
 
-.services-item:not(:nth-child(4n)) {
+.services__item:not(:nth-child(4n)) {
   margin-right: 30px;
 }
 
-.services-item-icon {
+.items__icon {
   fill: #3172b9;
   margin-bottom: 25px;
+  transition: fill 0.3s ease-in-out;
 }
 
-.services-item:hover .services-item-icon {
+.services__item:hover .items__icon {
   fill: #fff;
 }
 
-.services-item-title {
+.items__title {
   margin: 0;
   margin-bottom: 15px;
   font-weight: 600;
   font-size: 20px;
   line-height: 130%;
   color: #1C1C1C;
+  transition: color 0.3s ease-in-out;
 }
 
-.services-item:hover .services-item-title {
+.services__item:hover .items__title {
   color: #fff;
 }
 
-.services-item-descr {
+.items__descr {
   margin: 0;
   text-align: center;
   font-size: 14px;
   line-height: 150%;
   color: #787878;
+  transition: color 0.3s ease-in-out;
 }
 
-.services-item:hover .services-item-descr {
+.services__item:hover .items__descr {
   color: #fff;
 }
 
@@ -332,16 +340,16 @@ body {
   border-bottom: 1px solid #dadada;
 }
 
-.articles-list {
+.articles__list {
   flex-wrap: wrap;
 }
 
-.articles-item {
+.articles__item {
   width: 570px;
   margin-bottom: 30px;
 }
 
-.articles-item:not(:nth-child(2n)) {
+.articles__item:not(:nth-child(2n)) {
   margin-right: 30px;
 }
 
@@ -351,89 +359,93 @@ body {
   border-radius: 5px;
 }
 
-.blog-preview-image {
+.blog-preview__image {
   object-fit: cover;
 }
 
-.blog-preview-text {
+.blog-preview__text {
   padding: 30px;
 }
 
-.blog-preview-time {
+.blog-preview__time {
   display: block;
   margin-bottom: 5px;
   font-size: 10px;
   line-height: 150%;
   color: #787878;
+  transition: color 0.3s ease-in-out;
 }
 
-.blog-preview-title {
+.blog-preview__title {
   margin: 0;
   margin-bottom: 15px;
   font-weight: 600;
   font-size: 20px;
   line-height: 130%;
   color: #1C1C1C;
+  transition: color 0.3s ease-in-out;
 }
 
-.blog-preview-decr {
+.blog-preview__decr {
   margin: 0;
   font-size: 14px;
   line-height: 150%;
   color: #787878;
   max-width: 210px;
+  transition: color 0.3s ease-in-out;
 }
 
-.blog-preview-link {
+.blog-preview__link {
   position: relative;
   width: 100%;
+  transition: background-color 0.3s ease-in-out;
 }
 
-.blog-preview-link:focus {
+.blog-preview__link:focus {
   background-color: #71a7e2;
 }
 
-.blog-preview-link:focus .blog-preview-time {
+.blog-preview__link:focus .blog-preview__time {
   color: #fff;
 }
 
-.blog-preview-link:focus .blog-preview-title {
+.blog-preview__link:focus .blog-preview__title {
   color: #fff;
 }
 
-.blog-preview-link:focus .blog-preview-decr {
+.blog-preview__link:focus .blog-preview__decr {
   color: #fff;
 }
 
-.blog-preview-link:hover {
+.blog-preview__link:hover {
   background-color: #3172b9;
 }
 
-.blog-preview-link:hover .blog-preview-time {
+.blog-preview__link:hover .blog-preview__time {
   color: #fff;
 }
 
-.blog-preview-link:hover .blog-preview-title {
+.blog-preview__link:hover .blog-preview__title {
   color: #fff;
 }
 
-.blog-preview-link:hover .blog-preview-decr {
+.blog-preview__link:hover .blog-preview__decr {
   color: #fff;
 }
 
-.blog-preview-link:active {
+.blog-preview__link:active {
   background-color: #0e3b6c;
 }
 
-.blog-preview-link:active .blog-preview-time {
+.blog-preview__link:active .blog-preview__time {
   color: #fff;
 }
 
-.blog-preview-link:active .blog-preview-title {
+.blog-preview__link:active .blog-preview__title {
   color: #fff;
 }
 
-.blog-preview-link:active .blog-preview-decr {
+.blog-preview__link:active .blog-preview__decr {
   color: #fff;
 }
 
@@ -443,7 +455,7 @@ body {
   border-bottom: 1px solid #dadada;
 }
 
-.clients-item {
+.clients__item {
   flex-direction: column;
   width: 370px;
   padding: 50px 36px;
@@ -452,11 +464,11 @@ body {
   border-radius: 5px;
 }
 
-.clients-item:not(:nth-child(3n)) {
+.clients__item:not(:nth-child(3n)) {
   margin-right: 30px;
 }
 
-.client-item-descr {
+.client__descr {
   margin: 0;
   margin-bottom: 30px;
   font-size: 14px;
@@ -464,7 +476,7 @@ body {
   color: #787878;
 }
 
-.clients-user {
+.clients__user {
   margin-top: auto;
   align-items: center;
   border-top: 1px solid #DADADA;
@@ -472,27 +484,27 @@ body {
   padding-top: 28px;
 }
 
-.clients-avatar {
+.clients__avatar {
   flex-shrink: 0;
   width: 67px;
   margin-right: 17px;
 }
 
-.clients-avatar img {
+.clients__avatar img {
   width: 100%;
   height: 100%;
   border: 2px solid #3172B9;
   border-radius: 100%;
 }
 
-.clients-name {
+.clients__name {
   font-weight: 600;
   font-size: 17px;
   line-height: 180%;
   color: #1C1C1C;
 }
 
-.clients-post {
+.clients__post {
   font-size: 14px;
   line-height: 180%;
   color: #787878;
@@ -504,11 +516,11 @@ body {
   border-bottom: 1px solid #dadada;
 }
 
-.contacts-address {
+.contacts__address {
   font-style: normal;
 }
 
-.contacts-item {
+.contacts__item {
   flex-direction: column;
   width: 370px;
   background-position: left top;
@@ -517,23 +529,23 @@ body {
   padding-top: 48px;
 }
 
-.contacts-item-location {
+.contacts__item_location-bg {
   background-image: url(../img/location.svg);
 }
 
-.contacts-item-phone {
+.contacts__item_phone-bg {
   background-image: url(../img/phone.svg);
 }
 
-.contacts-item-mail {
+.contacts__item_mail-bg {
   background-image: url(../img/mail.svg);
 }
 
-.contacts-item:not(:nth-child(3n)) {
+.contacts__item:not(:nth-child(3n)) {
   margin-right: 30px;
 }
 
-.contacts-item-caption {
+.contacts__caption {
   margin-bottom: 30px;
   font-weight: 600;
   font-size: 17px;
@@ -541,7 +553,7 @@ body {
   color: #1C1C1C;
 }
 
-.contacts-item-text {
+.contacts__text {
   margin: 0;
   max-width: 215px;
   font-size: 14px;
@@ -549,23 +561,24 @@ body {
   color: #787878;
 }
 
-.contacts-item-link {
+.contacts__link {
   align-self: flex-start;
   font-size: 14px;
   line-height: 180%;
   color: #787878;
+  transition: color 0.3s ease-in-out;
 }
 
-.contacts-item-link:focus {
+.contacts__link:focus {
   outline-offset: 2px;
   outline: 1px solid #71a7e2;
 }
 
-.contacts-item-link:hover {
+.contacts__link:hover {
   color: #71a7e2;
 }
 
-.contacts-item-link:active {
+.contacts__link:active {
   color: #0e3b6c;
   outline: none;
 }
@@ -576,12 +589,12 @@ body {
   border-bottom: 1px solid #dadada;
 }
 
-.join-us-title {
+.join-us__title {
   text-align: center;
   margin-bottom: 22px;
 }
 
-.join-us-descr {
+.join-us__descr {
   text-align: center;
   margin-bottom: 30px;
 }
@@ -591,106 +604,109 @@ body {
   padding-right: 55px;
 }
 
-.form-input {
+.form__input {
   border: 1px solid #dadada;
   border-radius: 50px;
   padding: 16px 28px;
   width: 251px;
   height: 60px;
+  transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
-.form-input:focus {
+.form__input:focus {
   outline: none;
   border-color: #71a7e2;
   background-color: rgba(113, 167, 226, 0.2);
 }
 
-.form-input:hover {
+.form__input:hover {
   border-color: #71a7e2;
 }
 
-.form-input:active {
+.form__input:active {
   border-color: #0e3b6c;
 }
 
-.form-input:not(:nth-child(3n)) {
+.form__input:not(:nth-child(3n)) {
   margin-bottom: 19px;
 }
 
-.form-select {
+.form__select {
   border: 1px solid #dadada;
   border-radius: 50px;
   width: 251px;
   height: 60px;
   padding: 16px 28px;
+  transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
-.form-select:focus {
+.form__select:focus {
   outline: none;
   border-color: #71a7e2;
   background-color: rgba(113, 167, 226, 0.2);
 }
 
-.form-select:hover {
+.form__select:hover {
   border-color: #71a7e2;
 }
 
-.form-select:active {
+.form__select:active {
   border-color: #0e3b6c;
 }
 
-.form-textarea {
+.form__textarea {
   border: 1px solid #DADADA;
   border-radius: 20px;
   resize: none;
   padding: 16px 28px;
   width: 100%;
   height: 100%;
+  transition: border-color 0.3s ease-in-out, background-color 0.3s ease-in-out;
 }
 
-.form-textarea:focus {
+.form__textarea:focus {
   outline: none;
   border-color: #71a7e2;
   background-color: rgba(113, 167, 226, 0.2);
 }
 
-.form-textarea:hover {
+.form__textarea:hover {
   border-color: #71a7e2;
 }
 
-.form-textarea:active {
+.form__textarea:active {
   border-color: #0e3b6c;
 }
 
-.form-bottom {
+.form__bottom {
   display: flex;
   justify-content: flex-end;
 }
 
-.form-wrapper {
+.form__wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.form-top {
+.form__top {
   display: flex;
   justify-content: space-between;
   margin-bottom: 19px;
 }
 
-.form-left {
+.form__left {
   width: 49%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
-.form-right {
+.form__right {
   width: 49%;
 }
 
-.form-button {
+.form__button {
   min-width: 230px;
   padding-top: 20px;
   padding-bottom: 20px;
@@ -698,17 +714,17 @@ body {
   margin-bottom: 9px;
 }
 
-.form-check {
+.form__check {
   font-size: 12px;
   line-height: 16px;
   color: #787878;
 }
 
-.form-check input {
+.form__check input {
   margin-right: 8px;
 }
 
-.form-check a {
+.form__check a {
   color: #3172b9;
   border-bottom: 1px solid #3172b9;
 }
@@ -719,42 +735,74 @@ body {
   padding: 42px 0;
 }
 
-.footer-copy {
+.footer__copy {
   font-size: 12px;
   line-height: 16px;
   color: #787878;
 }
 
-.footer-link {
+.footer__nav .nav__link {
+  position: relative;
   font-weight: 600;
   font-size: 15px;
   line-height: 20px;
   color: #787878;
+  transition: color 0.3s ease-in-out;
 }
 
-.footer-container {
+.nav__link:focus {
+  outline-offset: 2px;
+  outline: 1px solid #71a7e2;
+}
+
+.nav__link:hover {
+  color: #71a7e2;
+}
+
+.nav__link::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background-color: #3474ba;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.nav__link:active {
+  outline: none;
+  color: #3172b9;
+}
+
+.nav__link:active::after {
+  opacity: 1;
+}
+
+.footer__container {
   align-items: center;
   justify-content: space-between;
 }
 
-.footer-left,
-.footr-right {
+.footer__left,
+.footr__right {
   align-items: center;
 }
 
-.footer-logo {
+.footer__logo {
   margin-right: 25px;
 }
 
-.footer-item:not(:last-child) {
+.footer__nav .nav__item:not(:last-child) {
   margin-right: 28px;
 }
 
-.footer-nav {
+.footer__nav {
   margin-right: 56px;
 }
 
-.sociail-link {
+.social__link {
   display: flex;
   width: 24px;
   height: 24px;
@@ -762,42 +810,43 @@ body {
   justify-content: center;
 }
 
-.social-item:not(:last-child) {
+.social__item:not(:last-child) {
   margin-right: 32px;
 }
 
-.sociail-link svg {
+.social__link svg {
   fill: #000;
+  transition: fill 0.3s ease-in-out, stroke 0.3s ease-in-out;
 }
 
-.social-link-mail svg {
+.social__link_mail svg {
   fill: transparent;
   stroke: black;
 }
 
-.sociail-link:focus {
+.social__link:focus {
  outline-offset: 2px;
  outline: 1px solid #71a7e2;
 }
 
-.sociail-link:hover svg {
+.social__link:hover svg {
   fill: #71a7e2;
 }
 
-.social-link-mail:hover svg {
+.social__link_mail:hover svg {
   fill: transparent;
   stroke: #71a7e2;
 }
 
-.sociail-link:active {
+.social__link:active {
   outline: none;
 }
 
-.sociail-link:active svg {
+.social__link:active svg {
   fill: #3172b9;
 }
 
-.social-link-mail:active svg {
+.social__link_mail:active svg {
   fill: transparent;
   stroke: #3172b9;
 }
