--- a/css/style.css
+++ b/css/style.css
@@ -48,9 +48,13 @@ img {
 }
 
 body {
-  min-width: 1200px;
+  min-width: 320px;
   font-family: 'OpenSans', sans-serif;
   font-weight: 400;
+}
+
+:root {
+  --gap: 30px;
 }
 
 /*glob*/
@@ -73,7 +77,7 @@ body {
 }
 
 .container {
-  width: 1200px;
+  max-width: 1200px;
   padding: 0 15px;
   margin: 0 auto;
 }
@@ -205,6 +209,10 @@ body {
   opacity: 0;
 }
 
+.burger {
+  display: none;
+}
+
 /*hero*/
 
 .hero {
@@ -282,7 +290,7 @@ body {
   flex-direction: column;
   align-items: center;
   padding: 60px 30px;
-  width: 270px;
+  width: calc((100% - (var(--gap) * 3)) / 4);
   border: 1px solid #e4e4e4;
   border-radius: 5px;
   transition: background-color 0.3s ease-in-out, border-color 0.3s ease-in-out;
@@ -294,7 +302,7 @@ body {
 }
 
 .services__item:not(:nth-child(4n)) {
-  margin-right: 30px;
+  margin-right: var(--gap);
 }
 
 .items__icon {
@@ -310,6 +318,7 @@ body {
 .items__title {
   margin: 0;
   margin-bottom: 15px;
+  text-align: center;
   font-weight: 600;
   font-size: 20px;
   line-height: 130%;
@@ -345,12 +354,12 @@ body {
 }
 
 .articles__item {
-  width: 570px;
+  width: calc((100% - (var(--gap) * 1)) / 2);;
   margin-bottom: 30px;
 }
 
 .articles__item:not(:nth-child(2n)) {
-  margin-right: 30px;
+  margin-right: var(--gap);
 }
 
 .blog-preview {
@@ -457,7 +466,7 @@ body {
 
 .clients__item {
   flex-direction: column;
-  width: 370px;
+  width: calc((100% - (var(--gap) * 2)) / 3);
   padding: 50px 36px;
   padding-bottom: 30px;
   border: 1px solid #E4E4E4;
@@ -465,7 +474,7 @@ body {
 }
 
 .clients__item:not(:nth-child(3n)) {
-  margin-right: 30px;
+  margin-right: var(--gap);
 }
 
 .clients__descr {
@@ -522,7 +531,7 @@ body {
 
 .contacts__item {
   flex-direction: column;
-  width: 370px;
+  width: calc((100% - (var(--gap) * 2)) / 3);
   background-position: left top;
   background-repeat: no-repeat;
   background-size: 29px 29px;
@@ -542,7 +551,7 @@ body {
 }
 
 .contacts__item:not(:nth-child(3n)) {
-  margin-right: 30px;
+  margin-right: var(--gap);
 }
 
 .contacts__caption {
@@ -605,6 +614,7 @@ body {
 }
 
 .form__input {
+  margin-bottom: 19px;
   border: 1px solid #dadada;
   border-radius: 50px;
   padding: 16px 28px;
@@ -627,9 +637,9 @@ body {
   border-color: #0e3b6c;
 }
 
-.form__input:not(:nth-child(3n)) {
+/* .form__input:not(:nth-child(3n)) {
   margin-bottom: 19px;
-}
+} */
 
 .form__select {
   border: 1px solid #dadada;
